--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -35,7 +35,7 @@
 					<div class="right-contents">
 						<div id="right-guide-text">
 							<div id="right-text-top">가입하기</div>
-							<div id="right-text-mid">항상 지금처럼 유료로 즐기실 수 있습니다.</div>
+							<div id="right-text-mid">항상 지금처럼 무료로 즐기실 수 있습니다.</div>
 						</div>
 						<div class="registration-container"> <div id="reg-box">
 								<form id="reg" action="{% url 'login:signup' %}" method="POST">{% csrf_token %} 
